[gd_scene load_steps=9 format=3 uid="uid://cy0axh6ujf2e2"]

[ext_resource type="Script" path="res://Overlay.gd" id="1_yum71"]
[ext_resource type="Script" path="res://SetupClickThrough.cs" id="2_a8psl"]
[ext_resource type="Script" path="res://TCPListner.gd" id="3_4snvs"]
[ext_resource type="Script" path="res://ScreenRecorder.gd" id="5_8jxw5"]
[ext_resource type="Script" path="res://MenuWindowManager.gd" id="5_ccnv2"]
[ext_resource type="PackedScene" uid="uid://cgj2mj2udfymj" path="res://GameMode/overlay_hud.tscn" id="6_8le2b"]
[ext_resource type="PackedScene" uid="uid://ddvjgqct4psrm" path="res://beta_voices.tscn" id="6_u5bfc"]
[ext_resource type="PackedScene" uid="uid://b844iu8bl6ul2" path="res://GameMode/warning_message.tscn" id="7_227ed"]

[node name="Overlay" type="Node2D"]
script = ExtResource("1_yum71")

[node name="SetupClickThrough" type="Node" parent="."]
script = ExtResource("2_a8psl")

[node name="TCPListner" type="Node" parent="."]
script = ExtResource("3_4snvs")

[node name="MenuWindowSetup" type="Node" parent="."]
script = ExtResource("5_ccnv2")

[node name="ScreenRecorder" type="Node" parent="."]
script = ExtResource("5_8jxw5")

[node name="BetaVoices" parent="." instance=ExtResource("6_u5bfc")]

[node name="OverlayHUD" parent="." instance=ExtResource("6_8le2b")]

[node name="WarningMessage" parent="." instance=ExtResource("7_227ed")]
visible = false
